<resources>
    <string name="app_name">CircuitSphere</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="view_cart">View Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="sign_out">Sign Out</string>
    <string name="description_hint">Description:</string>
    <string name="product_number_hint">Product Number:</string>
    <string name="current_cart">Current Cart:</string>
    <string name="product_image">Product Image</string>
</resources>